/**
 * Order domain types — Phase 2A QRTable.
 * Single source of truth cho FE+BE về Order aggregate.
 *
 * @see docs/phases/phase-2a-order-kafka.md §8 (state machine)
 * @see docs/specs/business-logic-step-2.4-spec.vi.md §14 (station snapshot)
 */

import type { PreparationStation } from './menu.types';

// ─── Enums ──────────────────────────────────────────
// Using const-object + type alias pattern (instead of TS `enum`) to satisfy
// `erasableSyntaxOnly` in customer-pwa tsconfig while preserving spec D3 intent:
//   - BE class-validator `@IsEnum(OrderStatus)` works (v0.14+ accepts const objects)
//   - FE compile-time exhaustiveness (Record<OrderStatus, ...>) identical
//   - Object.values(OrderStatus) introspection (used by shared-constants) identical
//   - UPPERCASE casing preserved per Phase 2A spec §8

export const OrderStatus = {
  /** Cart chưa submit (status implicit cho cart aggregate) */
  DRAFT: 'DRAFT',
  /** Submitted, chờ staff confirm */
  PENDING: 'PENDING',
  /** Confirmed, bếp đang làm */
  PROCESSING: 'PROCESSING',
  /** Bếp xong, chờ phục vụ bàn */
  READY: 'READY',
  /** Đã đem ra bàn */
  SERVED: 'SERVED',
  /** Bill paid (terminal happy path) */
  COMPLETED: 'COMPLETED',
  /** Huỷ (terminal failure path) */
  CANCELED: 'CANCELED',
} as const;
export type OrderStatus = (typeof OrderStatus)[keyof typeof OrderStatus];

export const OrderItemStatus = {
  /** Bếp/bar đang làm */
  PROCESSING: 'PROCESSING',
  /** Xong, chờ phục vụ */
  READY: 'READY',
  /** Đã đem ra bàn */
  SERVED: 'SERVED',
  /** Item bị huỷ (vd: hết stock đột xuất) */
  CANCELED: 'CANCELED',
} as const;
export type OrderItemStatus = (typeof OrderItemStatus)[keyof typeof OrderItemStatus];

// ─── Entity types ───────────────────────────────────

export type OrderItem = {
  id: string;
  orderId: string;
  menuItemId: string;
  /** Denormalized for display — avoids JOIN in POS/KDS rendering */
  menuItemName: string;
  /** Catalog image URL snapshot at submit time for POS/KDS display */
  menuItemImageUrl?: string | null;
  quantity: number;
  /** VND integer (no decimals) */
  unitPrice: number;
  note?: string;
  status: OrderItemStatus;
  /** Catalog `MenuItem.station` snapshot at submit/confirm — Step 2.4 */
  station?: PreparationStation;
  /** ISO 8601 */
  createdAt: string;
  /** ISO 8601 */
  updatedAt: string;
};

export type Order = {
  id: string;
  tenantId: string;
  tableId: string;
  /** Denormalized for display */
  tableName: string;
  sessionId: string;
  items: OrderItem[];
  status: OrderStatus;
  /** VND integer = sum(items.unitPrice * quantity) */
  totalAmount: number;
  /** UUID v4 generated by FE for dedup at submit */
  idempotencyKey: string;
  /** Customer notes (vd: "không cay") */
  notes?: string;
  /** Audit — set khi PENDING → PROCESSING */
  confirmedAt?: string;
  /** Audit — staff Keycloak sub */
  confirmedByUserId?: string;
  /** Audit — set khi → CANCELED */
  cancelledAt?: string;
  /** Audit — staff Keycloak sub hoặc null nếu customer cancel */
  cancelledByUserId?: string;
  /** Optional cancellation reason */
  cancelReason?: string;
  /** ISO 8601 */
  createdAt: string;
  /** ISO 8601 */
  updatedAt: string;
};

// ─── State transition matrix ────────────────────────

/**
 * Allowed Order state transitions per Phase 2A spec §8.
 *
 * Used by:
 *   - BE Order Service (Step 2.4): validate transition trước khi update DB
 *   - FE POS (Step 2.5): disable invalid action buttons
 *
 * @example
 *   if (!ALLOWED_ORDER_TRANSITIONS[currentStatus].includes(targetStatus)) {
 *     throw new InvalidOrderTransitionException(currentStatus, targetStatus);
 *   }
 */
export const ALLOWED_ORDER_TRANSITIONS: Record<OrderStatus, readonly OrderStatus[]> = {
  [OrderStatus.DRAFT]: [OrderStatus.PENDING, OrderStatus.CANCELED],
  [OrderStatus.PENDING]: [OrderStatus.PROCESSING, OrderStatus.CANCELED],
  [OrderStatus.PROCESSING]: [OrderStatus.READY, OrderStatus.CANCELED],
  [OrderStatus.READY]: [OrderStatus.SERVED],
  [OrderStatus.SERVED]: [OrderStatus.COMPLETED],
  [OrderStatus.COMPLETED]: [],
  [OrderStatus.CANCELED]: [],
} as const;
