erDiagram
  TENANTS ||--o{ SUBSCRIPTIONS : has
  PRICING_PLANS ||--o{ SUBSCRIPTIONS : configures
  TENANTS ||--o{ CATEGORIES : owns
  CATEGORIES ||--o{ MENU_ITEMS : includes
  TENANTS ||--o{ AREAS : owns
  AREAS ||--o{ TABLES : groups
  TENANTS ||--o{ TABLES : isolates
  TABLES ||--o{ SESSIONS : opens
  TENANTS ||--o{ SESSIONS : isolates
  SESSIONS ||--o{ ORDERS : contains
  TABLES ||--o{ ORDERS : receives
  TENANTS ||--o{ ORDERS : isolates
  ORDERS ||--o{ ORDER_ITEMS : has
  MENU_ITEMS ||--o{ ORDER_ITEMS : referenced_by
  TENANTS ||--o{ ORDER_ITEMS : isolates
  SESSIONS ||--|| BILLS : aggregates_to
  TENANTS ||--o{ BILLS : isolates
  BILLS ||--o{ PAYMENTS : paid_by
  TENANTS ||--o{ PAYMENTS : isolates
  SESSIONS ||--o{ SERVICE_REQUESTS : raises
  TABLES ||--o{ SERVICE_REQUESTS : from
  TENANTS ||--o{ SERVICE_REQUESTS : isolates

  TENANTS {
    uuid id PK
    string slug UK
    string name
    string status
    string default_currency
    string default_locale
    bool is_active
    timestamp created_at
    timestamp updated_at
  }

  PRICING_PLANS {
    uuid id PK
    string code UK
    string name
    int max_tables
    int max_staff
    bigint price_vnd
    timestamp created_at
    timestamp updated_at
  }

  SUBSCRIPTIONS {
    uuid id PK
    uuid tenant_id FK
    uuid pricing_plan_id FK
    timestamp starts_at
    timestamp expires_at
    bool is_active
    timestamp created_at
    timestamp updated_at
  }

  CATEGORIES {
    uuid id PK
    uuid tenant_id FK
    string name
    string status
    int sort_order
    string time_start
    string time_end
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
  }

  MENU_ITEMS {
    uuid id PK
    uuid tenant_id FK
    uuid category_id FK
    string name
    string description
    bigint price_vnd
    int stock_qty
    string status
    string image_url
    int sort_order
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
  }

  AREAS {
    uuid id PK
    uuid tenant_id FK
    string name
    int sort_order
    timestamp created_at
    timestamp updated_at
  }

  TABLES {
    uuid id PK
    uuid tenant_id FK
    uuid area_id FK
    string name
    int capacity
    string status
    string qr_token
    timestamp created_at
    timestamp updated_at
  }

  SESSIONS {
    uuid id PK
    uuid tenant_id FK
    uuid table_id FK
    string status
    timestamp started_at
    timestamp last_activity_at
    timestamp closed_at
    timestamp created_at
    timestamp updated_at
  }

  ORDERS {
    uuid id PK
    uuid tenant_id FK
    uuid table_id FK
    uuid session_id FK
    string status
    string idempotency_key UK
    bigint total_amount_vnd
    timestamp created_at
    timestamp updated_at
    timestamp deleted_at
  }

  ORDER_ITEMS {
    uuid id PK
    uuid tenant_id FK
    uuid order_id FK
    uuid menu_item_id FK
    int quantity
    bigint unit_price_vnd
    string note
    string status
    timestamp created_at
    timestamp updated_at
  }

  BILLS {
    uuid id PK
    uuid tenant_id FK
    uuid session_id FK
    bigint subtotal_vnd
    bigint total_vnd
    int rounding_delta_vnd
    string status
    timestamp created_at
    timestamp updated_at
  }

  PAYMENTS {
    uuid id PK
    uuid tenant_id FK
    uuid bill_id FK
    bigint amount_vnd
    bigint rounded_amount_vnd
    int rounding_delta_vnd
    string method
    string status
    string stripe_session_id UK
    timestamp paid_at
    timestamp created_at
    timestamp updated_at
  }

  SERVICE_REQUESTS {
    uuid id PK
    uuid tenant_id FK
    uuid table_id FK
    uuid session_id FK
    string request_type
    string status
    timestamp created_at
    timestamp updated_at
  }
